--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -10,9 +10,7 @@
             </div>
             <div class="hidden sm:block">{% include "./header_list.html" %}</div>
             <a class="hidden md:block" href="{% url 'hire_me' %}">
-                <button class="bg-pink-600 hover:bg-pink-500 transition-all duration-300 shadow-lg hover:shadow-xl text-white font-bold py-2 px-4 sm:py-3 sm:px-6 rounded font-montserrat">
-                    Get Free 1:1 Consultation
-                </button>
+                <button class="cta_button">Get Free 1:1 Consultation</button>
             </a>
             <a class="block md:hidden"
                href="javascript:void(0);"
