--- a/templates/components/social_icon.html
+++ b/templates/components/social_icon.html
@@ -34,7 +34,7 @@
     </a>
 </li>
 <li>
-    <a href="mailto:techrahis@outlook.com"
+    <a href="mailto:hi@techrahis.com"
        target="_blank"
        class="text-white hover:text-gray-200 text-3xl">
         <i class="fa-solid fa-envelope"></i>
