--- a/templates/components/mobile_header_list.html
+++ b/templates/components/mobile_header_list.html
@@ -14,9 +14,7 @@
 </ul>
 <div class="mt-4">
     <a href="{% url 'hire_me' %}">
-        <button class="bg-pink-600 hover:bg-pink-500 transition-all duration-300 shadow-lg hover:shadow-xl text-white font-bold py-2 px-4 sm:py-3 sm:px-6 rounded font-montserrat">
-            Get Free 1:1 Consultation
-        </button>
+        <button class="cta_button">Get Free 1:1 Consultation</button>
     </a>
 </div>
 <script>
