Refactor meta description in about and contact templates

--- a/core/templates/contact.html
+++ b/core/templates/contact.html
@@ -1,5 +1,8 @@
 {% extends "_base.html" %}
 {% block title %}Contact{% endblock %}
+{% block meta_description %}
+    I typically respond within 24 hours. Please use this form for professional inquiries only. Promotions and spam will not be entertained.
+{% endblock %}
 {% block content %}
     <div class="text-white mt-4 md:mt-16 md:w-4/5">
         <h1 class="font-montserrat text-2xl font-bold mb-4">Contact Me</h1>
