--- a/core/templates/about.html
+++ b/core/templates/about.html
@@ -1,6 +1,9 @@
 {% extends "_base.html" %}
 {% load static %}
 {% block title %}About{% endblock %}
+{% block meta_description %}
+    Hey there! I'm Rajarshi Samaddar, a full-stack software engineer from India with over 8 months of professional experience. My pronouns are he/they.
+{% endblock %}
 {% block content %}
     <div class="text-white mt-4 md:mt-16">
         <h1 class="font-montserrat text-2xl font-bold mb-4">About</h1>
