Refactor templates and views for "Get Free 1:1 Consultation" feature

--- a/templates/components/mobile_header_list.html
+++ b/templates/components/mobile_header_list.html
@@ -12,8 +12,8 @@
         <a href="{% url 'contact' %}">Contact</a>
     </li>
 </ul>
-<div class="mt-4">
-    <a href="{% url 'hire_me' %}">
+<div class="mt-8">
+    <a href="{% url 'get_free_consultation' %}">
         <button class="cta_button">Get Free 1:1 Consultation</button>
     </a>
 </div>
