--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -9,7 +9,7 @@
                 </a>
             </div>
             <div class="hidden sm:block">{% include "./header_list.html" %}</div>
-            <a class="hidden md:block" href="{% url 'hire_me' %}">
+            <a class="hidden md:block" href="{% url 'get_free_consultation' %}">
                 <button class="cta_button">Get Free 1:1 Consultation</button>
             </a>
             <a class="block md:hidden"
