--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1262,6 +1262,10 @@ video {
   flex-grow: 1;
 }
 
+.grow{
+  flex-grow: 1;
+}
+
 .table-auto{
   table-layout: auto;
 }
@@ -1697,6 +1701,11 @@ video {
 .text-gray-950{
   --tw-text-opacity: 1;
   color: rgb(3 7 18 / var(--tw-text-opacity));
+}
+
+.text-green-500{
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity));
 }
 
 .text-purple-600{
@@ -2205,20 +2214,8 @@ option:hover {
     width: 66.666667%;
   }
 
-  .md\:w-3\/4{
-    width: 75%;
-  }
-
   .md\:w-4\/5{
     width: 80%;
-  }
-
-  .md\:w-5\/6{
-    width: 83.333333%;
-  }
-
-  .md\:w-4\/6{
-    width: 66.666667%;
   }
 
   .md\:grid-cols-3{
