Refactor templates and views for "Get Free 1:1 Consultation" feature

--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -20,7 +20,7 @@
     </p>
     <p class="text-center mt-2 flex flex-row justify-center text-sky-600 font-bold items-center gap-2">
         <span class="flex items-center gap-2">
-            <i class="fa-solid fa-circle text-[0.4rem] animate-ping-status"></i> 265 visitors in last 7 days
+            <i class="fa-solid fa-circle text-[0.4rem] animate-ping-status"></i> All systems operational
         </span>
         <span class="text-white ml-2 text-opacity-70 flex items-center gap-1">
             <i class="fa-regular fa-clock text-[0.7rem] animate-spin-clock"></i>
