--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1778,6 +1778,10 @@ video {
   --tw-ring-color: rgb(124 58 237 / var(--tw-ring-opacity));
 }
 
+.filter{
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 .transition-all{
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
