--- a/templates/components/mobile_header_list.html
+++ b/templates/components/mobile_header_list.html
@@ -3,7 +3,7 @@
         <a href="{% url 'about' %}">About</a>
     </li>
     <li id="projects-tab">
-        <a href="{% url 'blogs' %}">Blogs</a>
+        <a href="{% url 'blog_list' %}">Blogs</a>
     </li>
     <li id="projects-tab">
         <a href="{% url 'portfolios' %}">Portfolios</a>
