--- a/templates/components/header_list.html
+++ b/templates/components/header_list.html
@@ -9,7 +9,7 @@
         <a href="{% url 'portfolios' %}">Portfolios</a>
     </li>
     <li id="contact-tab">
-        <a href="{% url 'contact' %}">Contact</a>
+        <a href="{% url 'contact' %}">Services</a>
     </li>
 </ul>
 <script>
