--- a/templates/components/mobile_header_list.html
+++ b/templates/components/mobile_header_list.html
@@ -14,7 +14,7 @@
 </ul>
 <div class="mt-8">
     <a href="{% url 'get_free_consultation' %}">
-        <button class="cta_button">Get Free 1:1 Consultation</button>
+        <button class="cta_button">⚡ Get Free 1:1 Consultation</button>
     </a>
 </div>
 <script>
