--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -10,7 +10,7 @@
             </div>
             <div class="hidden sm:block">{% include "./header_list.html" %}</div>
             <a class="hidden md:block" href="{% url 'get_free_consultation' %}">
-                <button class="cta_button">Get Free 1:1 Consultation</button>
+                <button class="cta_button">⚡ Get Free 1:1 Consultation</button>
             </a>
             <a class="block md:hidden"
                href="javascript:void(0);"
