--- a/blogs/templates/blog_detail.html
+++ b/blogs/templates/blog_detail.html
@@ -1,1 +1,30 @@
-
+{% extends "_base.html" %}
+{% block title %}{{ blog.title }}{% endblock %}
+{% block content %}
+    <div class="text-white mt-4 md:mt-16">
+        <h1 class="font-montserrat text-4xl font-bold mb-4">{{ blog.title }}</h1>
+        <p class="text-gray-200 text-lg font-bold font-inter mb-6">{{ blog.date|date:"F d, Y" }}</p>
+        <div class="mb-10">
+            <img src="{{ blog.cover_image.url }}"
+                 alt="{{ blog.title }}"
+                 class="w-full h-auto object-cover rounded-lg">
+        </div>
+        <!-- Short Description -->
+        <p class="text-gray-200 mb-4">{{ blog.short_description }}</p>
+        <div class="prose w-full max-w-none mt-6 mb-10">{{ blog.long_description|safe }}</div>
+        <div class="mt-6">
+            <h3 class="font-inter font-semibold mb-4">Category:</h3>
+            <a href="?category={{ blog.category.slug }}"
+               class="text-xs font-bold py-1 px-2 border-2 rounded-full bg-purple-600">{{ blog.category.name }}</a>
+            <h3 class="font-inter font-semibold mt-8">Tags:</h3>
+            <div class="flex flex-wrap gap-2 mt-4">
+                {% for tag in blog.tags.all %}
+                    <span class="text-xs font-bold py-1 px-2 border-2 rounded-full bg-purple-600">{{ tag.name }}</span>
+                {% endfor %}
+            </div>
+        </div>
+        <div class="mt-10">
+            <a href="/blogs" class="text-purple-600 text-lg font-inter font-bold">&laquo; Back to blogs</a>
+        </div>
+    </div>
+{% endblock %}
