--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -1,6 +1,9 @@
 <footer class="w-full mt-10 font-inter text-white text-sm text-opacity-70 bg-background text-primary py-4 border-t border-gray-800">
     <ul class="flex sm:flex space-x-4 font-inter font-semibold text-gray-400 justify-center mt-2 mb-4">
         <li>
+            <a href="{% url 'contact' %}">Contact</a>
+        </li>
+        <li>
             <a href="{% url 'privacy_policy' %}">Privacy policy</a>
         </li>
         <li>
@@ -8,9 +11,6 @@
         </li>
         <li>
             <a href="{% url 'colophon' %}">FAQs</a>
-        </li>
-        <li>
-            <a href="{% url 'colophon' %}">Colophon</a>
         </li>
     </ul>
     <p class="text-center">
