--- a/blogs/templates/blog_detail.html
+++ b/blogs/templates/blog_detail.html
@@ -1,5 +1,10 @@
 {% extends "_base.html" %}
 {% block title %}{{ blog.title }}{% endblock %}
+{% block meta_description %}{{ blog.short_description }}{% endblock %}
+{% block extra_head %}
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.10.0/styles/github-dark.min.css">
+{% endblock %}
 {% block content %}
     <div class="text-white mt-4 md:mt-16">
         <h1 class="font-montserrat text-4xl font-bold mb-4">{{ blog.title }}</h1>
@@ -27,4 +32,21 @@
             <a href="/blogs" class="text-purple-600 text-lg font-inter font-bold">&laquo; Back to blogs</a>
         </div>
     </div>
+{% endblock %}
+{% block extra_body %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.10.0/highlight.min.js"
+            integrity="sha512-6yoqbrcLAHDWAdQmiRlHG4+m0g/CT/V9AGyxabG8j7Jk8j3r3K6due7oqpiRMZqcYe9WM2gPcaNNxnl2ux+3tA=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.10.0/languages/django.min.js"
+            integrity="sha512-i45KtXWQJi9E09BW4MYH06iSqtzFnoVpQVoY1fHmr8yG5WQoE9ARCxbKljvL7QDu+n+agJzz/MNI/tAp8tNKIg=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"></script>
+    <script>
+  document.addEventListener("DOMContentLoaded", (event) => {
+    document.querySelectorAll('pre code').forEach((el) => {
+      hljs.highlightElement(el);
+    });
+  });
+    </script>
 {% endblock %}
