--- a/templates/_base.html
+++ b/templates/_base.html
@@ -18,10 +18,12 @@
       <link rel="stylesheet" href="{% static 'css/main.css' %}" />
     {% endcompress %}
     <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.10.0/styles/github-dark.min.css">
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+          integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+          crossorigin="anonymous"
+          referrerpolicy="no-referrer" />
     <link rel="icon" href="{% static 'images/favicon.ico' %}" />
+    {% block extra_head %}{% endblock %}
   </head>
   <body class="bg-gray-950">
     {% include "components/navbar.html" %}
@@ -32,12 +34,5 @@
     </div>
     {% include "components/footer.html" %}
   </body>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.10.0/highlight.min.js"></script>
-  <script>
-    document.addEventListener("DOMContentLoaded", (event) => {
-      document.querySelectorAll('pre code').forEach((el) => {
-        hljs.highlightElement(el);
-      });
-    });
-  </script>
+  {% block extra_body %}{% endblock %}
 </html>
